<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_hobby"
            android:title="@string/menu_hobby_label"/>
        <item
            android:id="@+id/nav_life"
            android:title="@string/menu_life_label"/>
        <item
            android:id="@+id/nav_health"
            android:title="@string/menu_health_label"/>
        <item
            android:id="@+id/nav_computer"
            android:title="@string/menu_computer_label"/>
        <item
            android:id="@+id/nav_favoriteList"
            android:title="@string/menu_favorite"
            android:visible="false" />

    </group>



</menu>